--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewGame"
-            android:parentActivityName=".Games"></activity>
+        <activity android:name=".WinnerWindow"></activity>
+        <activity
+            android:name=".NewGame"
+            android:parentActivityName=".Games" />
         <activity android:name=".Games" />
         <activity
             android:name=".CreateAccount"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
