--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WinnerWindow"></activity>
+        <activity android:name=".game"></activity>
+        <activity android:name=".WinnerWindow" />
         <activity
             android:name=".NewGame"
             android:parentActivityName=".Games" />
