--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CurrentGameActivity"/>
-        <activity android:name=".WinnerWindow" />
-        <activity android:name=".NewGame" />
-        <activity
-            android:name=".CreateAccount"
-            android:parentActivityName=".MainActivity" />
+        <activity android:name=".CurrentGameActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".WinnerWindow"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
